# minifun-wasm

./: .gitignore  Cargo.toml  build.sh  index.html
js/: worker.js
src/: lib.rs
wasm/: minifun_wasm.js  minifun_wasm_bg.wasm
